--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/node": "^16.18.76",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
-    "openai": "^4.68.4",
+    "openai": "^4.73.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.2.0",
+    "react-router": "^7.0.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
