Fixed cursor not showing up when hovering over quiz buttons. Also changed API model for better parsing on results page

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react-dom": "^18.2.18",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
-    "openai": "^4.73.1",
+    "openai": "^4.75.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.2.0",
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^3.4.1"
   }
 }
